# entirius-service-volkanos

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: ci.yml
main/: __init__.py  asgi.py  celery.py  settings.py  settings_example.py  urls.py  v2_errors.py  wsgi.py
scripts/: ensure_test_users.py  test_users.example.yaml
tests/: test_smoke.py
