[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entirius-service-volkanos"
version = "3.0.0a9"
description = "Entirius Volkanos Service - base Django service adopting Volkanos modules"
authors = [
    { name = "Piotr Brzozowski", email = "piotrb@entirius.com" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16",
    "drf-spectacular>=0.28",
    "python-decouple>=3.8",
    "entirius-py-bievents>=2.0.0",
    "entirius-py-graylog-json-formatter>=2.0.0",
    "entirius-py-int-enum-choices>=2.0.0",
    "entirius-py-lockfile>=2.0.0",
    "entirius-py-idx-normalizator>=2.0.0",
    "entirius-py-process-logger>=2.0.0",
    "entirius-py-image-transformations>=2.0.0",
    "entirius-py-pdf-generator>=2.0.0",
    "entirius-py-payu-sdk>=2.0.0",
    "entirius-py-paypal-sdk>=2.0.0",
    "entirius-py-autopay-sdk>=2.0.0",
    "entirius-py-przelewy24-sdk>=2.0.0",
    "entirius-py-paynow-sdk>=2.0.0",
    "entirius-py-magento2-sdk>=2.0.0",
    "entirius-py-synerise-sdk>=2.0.0",
    "entirius-py-salesmanago-sdk>=2.0.0",
    "entirius-py-edrone-sdk>=2.0.0",
    "entirius-py-get-response-sdk>=3.0.0",
    "entirius-py-magento2-sdk2>=2.0.0",
    "entirius-django-regional>=2.0.1",
    "entirius-django-utils>=2.0.0",
    "entirius-django-pim>=3.0.0",
    "entirius-django-utils-translator>=2.0.0",
    "entirius-django-pricemanager>=4.0.0",
    "entirius-django-pim-csv>=3.0.0",
    "entirius-django-pim-translator>=2.0.0",
    "entirius-django-pim-export-to-magento-api>=2.0.0",
    "entirius-django-pim-export-to-magento-package>=2.0.0",
    "entirius-django-vat-validator>=2.0.0",
    "entirius-django-faq>=2.0.0",
    "entirius-django-munin>=2.0.0",
    "entirius-django-captcha>=2.0.0",
    "entirius-django-agreements>=2.0.0",
    "entirius-django-deliverypoints>=2.0.0",
    "entirius-django-qms>=4.0.0",
    "entirius-django-email>=4.0.0",
    "entirius-django-baselinker>=2.0.0",
    "entirius-django-crypt>=2.0.0",
    "entirius-django-enrichment>=2.0.0",
    "entirius-django-contentdb>=5.0.0",
    "entirius-django-accounts[pim]>=5.0.0",
    "entirius-django-suppliers[qms]>=2.0.0",
    "entirius-django-contentdb-translator>=2.0.1",
    "entirius-django-sitemap[pim,contentdb,faq]>=4.0.0",
    "entirius-django-accounts-export-to-magento-api>=2.0.0",
    "entirius-django-pricetuner>=2.0.0",
    "entirius-django-vault>=2.0.0",
    "entirius-django-reviews[magento]>=2.0.0",
    "entirius-django-matrix[qms,pricemanager,pricetuner]>=4.0.0",
    "dj-database-url>=2.2",
    "psycopg[binary]>=3.2",
]

[project.urls]
Repository = "https://github.com/entirius/entirius-service-volkanos"

[dependency-groups]
dev = [
    "ruff>=0.12",
    "pytest>=8.4",
    "pytest-django>=4.11",
    "pytest-cov>=6.2",
    "pre-commit>=4.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "main"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["apps", "main"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "DJ", "S"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"main/settings*.py" = ["F403", "F405", "S105"]
"*/migrations/*.py" = ["E501"]
"tests/**" = ["S101"]
"**/tests/**" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "main"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "main.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["apps", "tests"]

[tool.coverage.run]
source = ["apps", "main"]
omit = ["*/migrations/*", "*/tests/*", "manage.py", "main/wsgi.py", "main/asgi.py"]
